--- a/test/cbmc/proofs/Makefile-project-defines
+++ b/test/cbmc/proofs/Makefile-project-defines
@@ -14,6 +14,11 @@
 COMPILE_FLAGS += -fPIC
 COMPILE_FLAGS += -std=gnu90
 
+# Path to litani executable, used for running proofs and displaying report
+LITANI ?= $(SRCDIR)/test/cbmc/litani/litani
+PROJECT_NAME = "FreeRTOS coreMQTT"
+
+
 # Flags to pass to goto-cc for linking (typically those passed to gcc)
 LINK_FLAGS =
 
