--- a/test/cbmc/proofs/MQTT_GetPacketId/Makefile
+++ b/test/cbmc/proofs/MQTT_GetPacketId/Makefile
@@ -19,8 +19,8 @@
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 
-HARNESS_ENTRY=harness
-HARNESS_FILE=MQTT_GetPacketId_harness
+HARNESS_ENTRY=MQTT_GetPacketId_harness
+HARNESS_FILE=$(HARNESS_ENTRY).c
 
 DEFINES +=
 INCLUDES +=
@@ -28,7 +28,7 @@ INCLUDES +=
 REMOVE_FUNCTION_BODY +=
 UNWINDSET +=
 
-PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE).c
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 PROOF_SOURCES += $(SRCDIR)/test/cbmc/sources/mqtt_cbmc_state.c
 PROJECT_SOURCES += $(SRCDIR)/source/core_mqtt.c
 
