--- a/test/cbmc/proofs/MQTT_MatchTopic/Makefile
+++ b/test/cbmc/proofs/MQTT_MatchTopic/Makefile
@@ -19,8 +19,8 @@
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 
-HARNESS_ENTRY=harness
-HARNESS_FILE=MQTT_MatchTopic_harness
+HARNESS_ENTRY=MQTT_MatchTopic_harness
+HARNESS_FILE=$(HARNESS_ENTRY).c
 
 # The topic name/filter length are bounded, so that the loops in topic matching algorithmic
 # functions called by MQTT_MatchTopic can be unwound to an expected
@@ -35,7 +35,7 @@ UNWINDSET += __CPROVER_file_local_core_mqtt_c_matchTopicFilter.0:$(MAX_TOPIC_NAM
 UNWINDSET += strncmp.0:$(MAX_TOPIC_NAME_FILTER_LENGTH)
 UNWINDSET += __CPROVER_file_local_core_mqtt_c_matchWildcards.0:$(MAX_TOPIC_NAME_FILTER_LENGTH)
 
-PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE).c
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 PROOF_SOURCES += $(SRCDIR)/test/cbmc/sources/mqtt_cbmc_state.c
 PROJECT_SOURCES += $(SRCDIR)/source/core_mqtt.c
 
