--- a/test/cbmc/proofs/MQTT_GetIncomingPacketTypeAndLength/Makefile
+++ b/test/cbmc/proofs/MQTT_GetIncomingPacketTypeAndLength/Makefile
@@ -19,8 +19,8 @@
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
 
-HARNESS_ENTRY=harness
-HARNESS_FILE=MQTT_GetIncomingPacketTypeAndLength_harness
+HARNESS_ENTRY=MQTT_GetIncomingPacketTypeAndLength_harness
+HARNESS_FILE=$(HARNESS_ENTRY).c
 
 DEFINES +=
 INCLUDES +=
@@ -31,7 +31,7 @@ REMOVE_FUNCTION_BODY +=
 # log128(SIZE_MAX) = 4.571...
 UNWINDSET += __CPROVER_file_local_core_mqtt_serializer_c_getRemainingLength.0:5
 
-PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE).c
+PROOF_SOURCES += $(PROOFDIR)/$(HARNESS_FILE)
 PROOF_SOURCES += $(SRCDIR)/test/cbmc/sources/mqtt_cbmc_state.c
 PROOF_SOURCES += $(SRCDIR)/test/cbmc/stubs/network_interface_stubs.c
 PROJECT_SOURCES += $(SRCDIR)/source/core_mqtt_serializer.c
